--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.18.0",
-    "knex": "^0.16.5"
+    "knex": "^0.16.5",
+    "morgan": "^1.9.1"
   }
 }
