--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "helmet": "^3.18.0",
     "knex": "^0.16.5",
     "morgan": "^1.9.1"
+  },
+  "scripts": {
+      "local": "node server.js"
   }
 }
